Use LauncherHelper. Fixed flickering of the dashboard widgets #1475

--- a/src/main/resources/assets/styles/home/widgets.less
+++ b/src/main/resources/assets/styles/home/widgets.less
@@ -24,11 +24,11 @@
       grid-column: span 1;
       padding: 10px;
       margin: 10px;
+      opacity: 0;
 
       .widget-contents {
         width: 100%;
         height: 100%;
-        opacity: 0;
         overflow: auto;
         box-sizing: border-box;
 
@@ -42,11 +42,8 @@
 
       &.loaded {
         margin: 0;
-
-        .widget-contents {
-          transition: opacity 2s;
-          opacity: 1;
-        }
+        opacity: 1;
+        transition: opacity 2s;
 
         &.width-auto {
           width: fit-content;
